# sillywalk

./: .copier-answers.yml  .editorconfig  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  model1.npz  model_params.npz  pixi.toml  pyproject.toml  temp.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  scorecard.yml  update-lockfiles.yml
sillywalk/: __init__.py  mlpca.py
src/sillywalk/: __init__.py  _mlpca.py  _transformer_validation.py  anybody.py  mlpca.py  version.py
src/sillywalk/templates/: model.any.jinja
tests/: Fourier.csv  driver_data.parquet  students.csv  test_anybody.py  test_core.py  test_custom_transformer.py  test_mlpca.py  test_notebook.py
